css/admin.css
/**
 * Admin CSS for PMPro Courses
 */

/* Admin styles for pmpro_courses CPT */
#pmpro_courses_lessons .pmpro_courses_add_lesson_table {
	margin-top: var(--pmpro--spacing--medium);
}

#pmpro_courses_lessons .pmpro_courses_add_lesson_table input[type=text] {
	border-color: #aaa;
	width: 100%;
}

#pmpro_courses_lessons .pmpro_courses_add_lesson_table .button {
	display: block;
	text-align: center;
}

.pmpro_courses_lesson_table th:nth-child(1),
.pmpro_courses_lesson_table th:nth-child(3) {
	white-space: nowrap;
	width: 1%;
}

.pmpro_courses_lesson_table td:nth-child(2) a {
	word-break: break-word;
}

.pmpro_courses_lesson_table .pmpro-sort-handle {
	color: #CCC;
}

.pmpro_courses_lesson_table .pmpro-sort-handle:hover {
	cursor: grab;
}

.pmpro_courses_lesson_table .pmpro-sort-handle:active {
	cursor: grabbing;
}

.pmpro_courses_lesson_table .ui-sortable-helper {
	background-color: #FFF;
	border: 2px solid #2997C8;
}

.pmpro_courses_lesson_table td p {
	margin: 0;
}

/* Admin styles for pmpro_lessons CPT */
#pmpro_courses_lesson_settings .inside {
	display: flex;
	flex-direction: column;
	gap: var(--pmpro--spacing--medium);
}

/* Edit Member panel */
#pmpro-member-edit-pmpro-courses-panel table {
	margin-top: var(--pmpro--spacing--medium);
}

/* ≥1200px adjustments */
@media only screen and (min-width: 1200px) {
	.pmpro_section-toggle-button input[type=text] {
		width: 500px;
	}
}

